--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,7 +27,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>7</number>
     </property>
     <widget class="QWidget" name="SignUpPage">
      <widget class="QGroupBox" name="SignUpBox">
@@ -764,8 +764,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <rect>
         <x>270</x>
         <y>120</y>
-        <width>86</width>
-        <height>25</height>
+        <width>141</width>
+        <height>41</height>
        </rect>
       </property>
       <item>
@@ -827,8 +827,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <rect>
         <x>330</x>
         <y>90</y>
-        <width>86</width>
-        <height>25</height>
+        <width>121</width>
+        <height>51</height>
        </rect>
       </property>
       <item>
@@ -894,6 +894,124 @@ li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Select which service to remove. Note that this cannot be undone. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_4">
+     <widget class="QPlainTextEdit" name="EncryptFileDesc">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>291</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="plainText">
+       <string>Encrypt a file. Ensure the content of this text file are located in the current directories plaintext.txt file.
+
+Enter your key:</string>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="EncryptFileKey">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>20</y>
+        <width>291</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="plainText">
+       <string>key</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="EncryptFileBTN_2">
+      <property name="geometry">
+       <rect>
+        <x>860</x>
+        <y>520</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Encrypt</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="EncryptFileBack">
+      <property name="geometry">
+       <rect>
+        <x>990</x>
+        <y>520</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_5">
+     <widget class="QPlainTextEdit" name="DecryptDesc">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>291</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="plainText">
+       <string>Decrypt a file. Ensure the content of this text file are located in the current directories ciphertext.txt file.
+
+Enter your key:</string>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="DecryptKey">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>20</y>
+        <width>291</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="plainText">
+       <string>key</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="DecryptDecryptBTN">
+      <property name="geometry">
+       <rect>
+        <x>830</x>
+        <y>520</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Decrypt</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="DecryptBackBTN">
+      <property name="geometry">
+       <rect>
+        <x>990</x>
+        <y>520</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Back</string>
       </property>
      </widget>
     </widget>
