further 2fa work

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -153,6 +153,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <property name="text">
         <string>Sign Up</string>
        </property>
+       <property name="icon">
+        <iconset theme="go-next"/>
+       </property>
       </widget>
       <widget class="QPlainTextEdit" name="EmailDes">
        <property name="geometry">
@@ -436,6 +439,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
        </property>
        <property name="text">
         <string>Login</string>
+       </property>
+       <property name="icon">
+        <iconset theme="go-next"/>
        </property>
       </widget>
       <widget class="QPushButton" name="SignUpRedirect">
@@ -775,6 +781,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="text">
        <string>Back</string>
       </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
+      </property>
      </widget>
      <widget class="QPushButton" name="CreateSaveBTN">
       <property name="geometry">
@@ -1034,6 +1043,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="text">
        <string>Back</string>
       </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
+      </property>
      </widget>
      <widget class="QPushButton" name="RetrieveGetBTN">
       <property name="geometry">
@@ -1184,6 +1196,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </property>
       <property name="text">
        <string>Back</string>
+      </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
       </property>
      </widget>
      <widget class="QTextEdit" name="DeleteDesc">
@@ -1341,6 +1356,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="text">
        <string>Back</string>
       </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
+      </property>
      </widget>
      <widget class="QPlainTextEdit" name="LogoBannerTXT_8">
       <property name="geometry">
@@ -1473,6 +1491,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </property>
       <property name="text">
        <string>Back</string>
+      </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
       </property>
      </widget>
      <widget class="QPlainTextEdit" name="LogoBannerTXT_9">
@@ -1610,6 +1631,9 @@ Additionally, you can choose to encrypt single files with a key of your choice.
       <property name="text">
        <string>Back</string>
       </property>
+      <property name="icon">
+       <iconset theme="go-previous"/>
+      </property>
      </widget>
      <widget class="QPlainTextEdit" name="LogoBannerTXT_10">
       <property name="geometry">
@@ -1684,7 +1708,150 @@ Additionally, you can choose to encrypt single files with a key of your choice.
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="page"/>
+    <widget class="QWidget" name="TwoFactorAuthPage">
+     <widget class="QLabel" name="TFATitle">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>451</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>25</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Check  Your Email!</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="TFADes">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>330</y>
+        <width>601</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>2FA is critical to ensuring your data safety. Even if someone got a hold of your
+ password, your email still stands in the way of your most critical passwords. 
+To this end, we've sent a code to your registered email. 
+
+Please check your spam or All Main folders 
+if it doesn't immediately show up in your inbox.
+
+This code is valid for 10 minutes. 
+</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="TFAHeader">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>511</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>We require two factor authentication and
+we've sent you an email with a one time passcode.</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="EntryLabel">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>210</y>
+        <width>131</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Enter OTP</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="TFAEntry">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>220</y>
+        <width>211</width>
+        <height>41</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="VerifyBTN">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>220</y>
+        <width>131</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Verify</string>
+      </property>
+      <property name="icon">
+       <iconset theme="go-next"/>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="LockIMG2fa">
+      <property name="geometry">
+       <rect>
+        <x>650</x>
+        <y>90</y>
+        <width>461</width>
+        <height>471</height>
+       </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>MainPageImg.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QPushButton" name="AboutBTN">
     <property name="geometry">
