--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>9</number>
     </property>
     <widget class="QWidget" name="SignUpPage">
      <widget class="QGroupBox" name="SignUpBox">
@@ -404,7 +404,7 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:6px; margin-bottom:6px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;mailto:philipjames2004@gmail.com&quot;&gt;&lt;span style=&quot; color:#007af4;&quot;&gt;philipjames2004@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:6px; margin-bottom:6px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;mailto:philipjames2004@gmail.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;philipjames2004@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
       <widget class="QTextEdit" name="PasswordLogin">
@@ -1737,7 +1737,7 @@ Additionally, you can choose to encrypt single files with a key of your choice.
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>330</y>
+        <y>420</y>
         <width>601</width>
         <height>151</height>
        </rect>
@@ -1751,13 +1751,7 @@ Additionally, you can choose to encrypt single files with a key of your choice.
       <property name="text">
        <string>2FA is critical to ensuring your data safety. Even if someone got a hold of your
  password, your email still stands in the way of your most critical passwords. 
-To this end, we've sent a code to your registered email. 
-
-Please check your spam or All Main folders 
-if it doesn't immediately show up in your inbox.
-
-This code is valid for 10 minutes. 
-</string>
+To this end, we've sent a code to your registered email.</string>
       </property>
      </widget>
      <widget class="QLabel" name="TFAHeader">
@@ -1784,7 +1778,7 @@ we've sent you an email with a one time passcode.</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>210</y>
+        <y>180</y>
         <width>131</width>
         <height>71</height>
        </rect>
@@ -1796,24 +1790,27 @@ we've sent you an email with a one time passcode.</string>
        </font>
       </property>
       <property name="text">
-       <string>Enter OTP</string>
+       <string/>
       </property>
      </widget>
-     <widget class="QLineEdit" name="TFAEntry">
+     <widget class="QLineEdit" name="OTPEntry">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>220</y>
+        <x>10</x>
+        <y>210</y>
         <width>211</width>
         <height>41</height>
        </rect>
+      </property>
+      <property name="text">
+       <string>Enter 6 digit numeric OTP</string>
       </property>
      </widget>
      <widget class="QPushButton" name="VerifyBTN">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>220</y>
+        <x>10</x>
+        <y>270</y>
         <width>131</width>
         <height>41</height>
        </rect>
@@ -1890,6 +1887,60 @@ we've sent you an email with a one time passcode.</string>
        <string>Password Manager and Encryption Service</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="ResendCodeBTN">
+      <property name="geometry">
+       <rect>
+        <x>-10</x>
+        <y>330</y>
+        <width>271</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Didn't get email?
+Click here to generate a new code </string>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="OTPMessagePane">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>200</y>
+        <width>261</width>
+        <height>181</height>
+       </rect>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="plainText">
+       <string>Please check your spam folder if you don't see the email in your inbox within 2 minutes. 
+
+This code is valid for 10 minutes.</string>
+      </property>
+     </widget>
+     <zorder>TFATitle</zorder>
+     <zorder>TFADes</zorder>
+     <zorder>TFAHeader</zorder>
+     <zorder>EntryLabel</zorder>
+     <zorder>OTPEntry</zorder>
+     <zorder>VerifyBTN</zorder>
+     <zorder>LogoBannerTXT_12</zorder>
+     <zorder>ResendCodeBTN</zorder>
+     <zorder>LockIMG2fa</zorder>
+     <zorder>OTPMessagePane</zorder>
     </widget>
    </widget>
    <widget class="QPushButton" name="AboutBTN">
