--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>10</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="SignUpPage">
      <widget class="QGroupBox" name="SignUpBox">
@@ -603,7 +603,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>220</y>
+        <y>210</y>
         <width>161</width>
         <height>61</height>
        </rect>
@@ -616,7 +616,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>310</y>
+        <y>300</y>
         <width>161</width>
         <height>61</height>
        </rect>
@@ -629,7 +629,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>400</y>
+        <y>390</y>
         <width>161</width>
         <height>61</height>
        </rect>
@@ -642,7 +642,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>490</y>
+        <y>480</y>
         <width>161</width>
         <height>61</height>
        </rect>
@@ -749,14 +749,14 @@ First of all, without your master password, the content of this application is j
      <widget class="QPushButton" name="DecryptFileBTN_2">
       <property name="geometry">
        <rect>
-        <x>770</x>
-        <y>490</y>
-        <width>201</width>
+        <x>20</x>
+        <y>560</y>
+        <width>161</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
-       <string>Hardware Banned Devices</string>
+       <string>Hardware Bans</string>
       </property>
      </widget>
     </widget>
